--- a/CREDITS.html
+++ b/CREDITS.html
@@ -1,60 +1,75 @@
 <html>
 <body>
+<h2>Agit - Android Git Client</h2>
+<b>&copy; 2011 Roberto Tyley</b>
 
-<h2>Binary dependencies</h2>
+<p>This app can bought on the <a href="https://market.android.com/">Android Market</a>, doing so supports the author
+    in creation of open-source software.
+</p>
 
-The distributed Agit binary contains code from:
+<p>This program is free software: you can redistribute it and/or modify
+it under the terms of the <a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>
+as published by the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.</p>
 
-JGit
-http://www.eclipse.org/jgit/
-JGit is an EDL (new-style BSD) licensed, lightweight, pure Java library implementing the Git version control system
-<p> 
-JGit is an <a href="http://www.eclipse.org/org/documents/edl-v10.php">EDL</a> 
-(new-style BSD) licensed, lightweight, pure Java library implementing Git:
-</p> 
+<p>This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.</p>
 
-http://code.google.com/p/roboguice/
-http://www.apache.org/licenses/LICENSE-2.0
+<h2>Credits</h2>
 
-http://code.google.com/p/google-guice/
-http://www.apache.org/licenses/LICENSE-2.0
+Agit makes heavy use of many
 
-http://commons.apache.org/io
-http://commons.apache.org/io/license.html
+<h3>Runtime dependencies</h3>
 
-http://code.google.com/p/google-collections/
-http://www.apache.org/licenses/LICENSE-2.0
+The distributed Agit binary contains software from the following projects:
 
-https://github.com/shikhar/sshj
-git://github.com/shikhar/sshj.git
-http://www.apache.org/licenses/LICENSE-2.0
+<dl>
+    <dt><a href="http://www.eclipse.org/jgit/">JGit</a></dt>
+    <dd>[<a href="http://www.eclipse.org/org/documents/edl-v10.php">EDL</a> (new-style BSD)]</dd>
 
-<h2>Test dependencies</h2>
+    <dt><a href="http://code.google.com/p/google-guice/">Guice</a></dt>
+    <dd>[<a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>]</dd>
 
-http://pivotal.github.com/robolectric/
-http://www.opensource.org/licenses/mit-license.php
+    <dt><a href="http://code.google.com/p/roboguice/">RoboGuice</a></dt>
+    <dd>[<a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>]</dd>
 
-https://github.com/rtyley/toy-android-ssh-agent
-http://www.gnu.org/licenses/gpl.html
+    <dt><a href="http://commons.apache.org/io">Commons IO</a></dt>
+    <dd>[<a href="http://commons.apache.org/io/license.html">Apache License 2.0</a>]</dd>
 
-https://github.com/rtyley/mini-git-server
-git://github.com/rtyley/mini-git-server.git
+    <dt><a href="http://code.google.com/p/google-collections/">Google Collections</a></dt>
+    <dd>[<a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>]</dd>
 
-Pure-Java WAR capable of hosting git repos and exposing them with git+ssh. Basically a stripped-down copy of Gerrit (http://code.google.com/p/gerrit/).
+    <dt><a href="https://github.com/shikhar/sshj">sshj</a> - SSHv2 library for Java</dt>
+    <dd>git://github.com/shikhar/sshj.git [<a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>]</dd>
+</dl>
 
-<h2>Build dependencies</h2>
+<h3>Test dependencies</h3>
+
+<dl>
+    <dt><a href="http://pivotal.github.com/robolectric/">Robolectric</a></dt>
+    <dd>[<a href="http://www.opensource.org/licenses/mit-license.php">MIT License</a>]</dd>
+
+    <dt><a href="https://github.com/rtyley/toy-android-ssh-agent">toy-android-ssh-agent</a></dt>
+    <dd>[<a href="http://www.gnu.org/licenses/gpl-3.0.html">GPL v3</a>]</dd>
+
+    <dt><a href="https://github.com/rtyley/mini-git-server">mini-git-server</a></dt>
+    <dd>Pure-Java WAR capable of hosting git repos and serving them over git+ssh.
+        Basically a stripped-down copy of <a href="http://code.google.com/p/gerrit/">Gerrit</a>.
+        git://github.com/rtyley/mini-git-server.git [<a href="http://www.gnu.org/licenses/gpl-3.0.html">GPL v3</a>]</dd>
+</dl>
+
+<h3>Build dependencies</h3>
 
 In addition, the build process uses the following software:
 
-http://maven.apache.org/
+<dl>
+    <dt><a href="http://proguard.sourceforge.net/">ProGuard</a></dt>
+    <dd>[<a href="http://proguard.sourceforge.net/license.html">GPL v2</a>]</dd>
 
-
-http://proguard.sourceforge.net/
-http://proguard.sourceforge.net/license.html
-
-http://code.google.com/p/maven-android-plugin/
-http://www.apache.org/licenses/LICENSE-2.0
-git://github.com/jayway/maven-android-plugin.git
-
+    <dt><a href="http://code.google.com/p/maven-android-plugin/">Maven Android Plugin</a></dt>
+    <dd>git://github.com/jayway/maven-android-plugin.git [<a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License 2.0</a>]</dd>
+</dl>
 </body>
 </html>
